kubernetes/deployment-mb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb
spec:
  selector:
    matchLabels:
      app: mb
  replicas: 2
  template:
    metadata:
      labels:
        app: mb
    spec:
      serviceAccountName: iam-account
      containers:
      - name: mb
        image: karlaru/message-board
        imagePullPolicy: Always
        ports:
          - name: tcp
            containerPort: 5000
        volumeMounts:
          - mountPath: "/messageBoard/conf.cfg"
            name: flask-conf
            subPath: conf.cfg
            readOnly: true

      volumes:
      - name: flask-conf
        secret:
            secretName: flask-conf

---

apiVersion: v1
kind: Service
metadata:
  name: messageboard
  labels:
    app: mb
spec:
  selector:
    app: mb
  ports:
    - port: 5000
