kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 50m

spec:
  tls:
    - hosts:
        - karlaru.com
      secretName: main-tls
  rules:
    - host: karlaru.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messageboard
                port:
                  number: 5000
